force-app/main/default/objects/Provider__c/fields/Dermatology_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Dermatology_Conditions__c</fullName>
    <label>Dermatology Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acanthosis Nigricans</fullName>
            </value>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Acneiform Eruption</fullName>
            </value>
            <value>
                <fullName>Acne Keloid</fullName>
            </value>
            <value>
                <fullName>Acne Vulgaris</fullName>
            </value>
            <value>
                <fullName>Actinic Cheilitis</fullName>
            </value>
            <value>
                <fullName>Actinic Keratosis</fullName>
            </value>
            <value>
                <fullName>Adult Acne</fullName>
            </value>
            <value>
                <fullName>Age Spots</fullName>
            </value>
            <value>
                <fullName>Aging Face</fullName>
            </value>
            <value>
                <fullName>Alopecia Areata</fullName>
            </value>
            <value>
                <fullName>Anal Warts</fullName>
            </value>
            <value>
                <fullName>Angioedema</fullName>
            </value>
            <value>
                <fullName>Angioma</fullName>
            </value>
            <value>
                <fullName>Athlete&#39;s Foot</fullName>
            </value>
            <value>
                <fullName>Atopic Dermatitis (Eczema)</fullName>
            </value>
            <value>
                <fullName>Atypical Mole</fullName>
            </value>
            <value>
                <fullName>Autoimmune Diseases</fullName>
            </value>
            <value>
                <fullName>Bacterial Infections</fullName>
            </value>
            <value>
                <fullName>Basal Cell Carcinoma</fullName>
            </value>
            <value>
                <fullName>Basal Cell Carcinomas w/Milia &amp; Course</fullName>
            </value>
            <value>
                <fullName>Basosquamous Carcinoma</fullName>
            </value>
            <value>
                <fullName>Bedsores</fullName>
            </value>
            <value>
                <fullName>Birthmark</fullName>
            </value>
            <value>
                <fullName>Black Hairy Tongue</fullName>
            </value>
            <value>
                <fullName>Boil</fullName>
            </value>
            <value>
                <fullName>Candidiasis of Skin and Nails</fullName>
            </value>
            <value>
                <fullName>Canker Sore</fullName>
            </value>
            <value>
                <fullName>Carbuncle</fullName>
            </value>
            <value>
                <fullName>Cellulitis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>