force-app/main/default/objects/Provider__c/fields/Dermatology_Practicing_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Dermatology_Practicing_Specialties__c</fullName>
    <label>SecondarDermatologyPracticingSpecialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anti-Aging Medicine</fullName>
            </value>
            <value>
                <fullName>Cosmetic Dermatologic Surgery</fullName>
            </value>
            <value>
                <fullName>Cosmetic Dermatology</fullName>
            </value>
            <value>
                <fullName>Dermatologic Oncology</fullName>
            </value>
            <value>
                <fullName>Dermatologic Surgery</fullName>
            </value>
            <value>
                <fullName>Mohs Micrographic Surgery</fullName>
            </value>
            <value>
                <fullName>Occupational Skin Diseases</fullName>
            </value>
            <value>
                <fullName>Pediatric Dermatology</fullName>
            </value>
            <value>
                <fullName>Procedural Dermatology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>