force-app/main/default/objects/Provider__c/fields/Dermatology_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Dermatology_Procedure__c</fullName>
    <label>Dermatology Procedure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acne Scar Removal</fullName>
            </value>
            <value>
                <fullName>Acne Surgery</fullName>
            </value>
            <value>
                <fullName>Adjacent Tissue Transfer</fullName>
            </value>
            <value>
                <fullName>Aged or Sun-Damaged Skin Treatment</fullName>
            </value>
            <value>
                <fullName>Belotero® Injection</fullName>
            </value>
            <value>
                <fullName>Biopsy of Affected Tissue</fullName>
            </value>
            <value>
                <fullName>Blu-U® Acne Light Treatment</fullName>
            </value>
            <value>
                <fullName>Botox® Injection</fullName>
            </value>
            <value>
                <fullName>Captique™ Injection</fullName>
            </value>
            <value>
                <fullName>Chemical Peel</fullName>
            </value>
            <value>
                <fullName>Chemodenervation</fullName>
            </value>
            <value>
                <fullName>CO2 Laser Skin Resurfacing Treatment</fullName>
            </value>
            <value>
                <fullName>Collagen Injection</fullName>
            </value>
            <value>
                <fullName>Condyloma Destruction</fullName>
            </value>
            <value>
                <fullName>Condyloma Fulguration</fullName>
            </value>
            <value>
                <fullName>CoolSculpting®</fullName>
            </value>
            <value>
                <fullName>Cosmetic Botox® Injection</fullName>
            </value>
            <value>
                <fullName>Cosmetic Laser Surgery</fullName>
            </value>
            <value>
                <fullName>Cosmetic Neck Surgery</fullName>
            </value>
            <value>
                <fullName>Cosmetic Procedure</fullName>
            </value>
            <value>
                <fullName>Cosmetic Xeomin® Injection</fullName>
            </value>
            <value>
                <fullName>Cryosurgery</fullName>
            </value>
            <value>
                <fullName>Cryosurgery for Skin Lesions</fullName>
            </value>
            <value>
                <fullName>Cryotherapy for Warts</fullName>
            </value>
            <value>
                <fullName>Cyst Aspiration</fullName>
            </value>
            <value>
                <fullName>Dermabrasion</fullName>
            </value>
            <value>
                <fullName>Dermabrasion and Dermaplaning</fullName>
            </value>
            <value>
                <fullName>Dermal Filler</fullName>
            </value>
            <value>
                <fullName>Dermatology Procedure</fullName>
            </value>
            <value>
                <fullName>Destruction of Benign Skin Lesion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>