force-app/main/default/objects/Provider__c/fields/Healthgrades_ID__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_ID__c</fullName>
    <description>The individual Provider&#39;s unique Healthgrades identifier.</description>
    <externalId>true</externalId>
    <label>Healthgrades ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>