force-app/main/default/objects/Provider__c/fields/Insurance_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Accepted__c</fullName>
    <description>Healthgrades profile data</description>
    <label>Insurance Accepted</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>