force-app/main/default/objects/Provider__c/fields/Insurance_Plans__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plans__c</fullName>
    <description>Opens up a Knowledge base article for Insurance plans</description>
    <formula>HYPERLINK(&quot;https://solutionreach.my.salesforce.com/articles/FAQ/Healthgrades-Insurance-Info&quot;,&quot;Insurance Plans&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Plans</label>
    <type>Text</type>
</CustomField>