force-app/main/default/objects/Provider__c/fields/Laser_Dentistry_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Laser_Dentistry_Conditions__c</fullName>
    <label>Laser Dentistry Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canker Sore</fullName>
            </value>
            <value>
                <fullName>Cold Sore</fullName>
            </value>
            <value>
                <fullName>Gummy Smile (Oversized Gingiva)</fullName>
            </value>
            <value>
                <fullName>Mouth Lesions</fullName>
            </value>
            <value>
                <fullName>Periodontitis</fullName>
            </value>
            <value>
                <fullName>Sensitive Teeth</fullName>
            </value>
            <value>
                <fullName>Stained Teeth</fullName>
            </value>
            <value>
                <fullName>Tooth Decay</fullName>
            </value>
            <value>
                <fullName>Tooth Discoloration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>