force-app/main/default/objects/Provider__c/fields/Laser_Dentistry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Laser_Dentistry_Procedures__c</fullName>
    <label>Laser Dentistry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frenectomy</fullName>
            </value>
            <value>
                <fullName>LANAP®</fullName>
            </value>
            <value>
                <fullName>Laser Hardening of Amalgam</fullName>
            </value>
            <value>
                <fullName>Laser Root Planing</fullName>
            </value>
            <value>
                <fullName>Lesion Removal</fullName>
            </value>
            <value>
                <fullName>Photodisinfection Process</fullName>
            </value>
            <value>
                <fullName>Teeth Whitening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>