force-app/main/default/objects/Provider__c/fields/Last_Profile_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Profile_Update_Date__c</fullName>
    <label>Last Profile Update Date</label>
    <type>DateTime</type>
</CustomField>