force-app/main/default/objects/Provider__c/fields/Last_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reported_Date__c</fullName>
    <description>Last date sent on HG Daily Profile Data feed. Used to filter and split files for size limitations.</description>
    <label>Last Reported Date</label>
    <type>Date</type>
</CustomField>