force-app/main/default/objects/Provider__c/fields/Last_Scorecard_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scorecard_Date__c</fullName>
    <label>Last Scorecard Date</label>
    <type>DateTime</type>
</CustomField>