force-app/main/default/objects/Provider__c/fields/Last_Scorecard_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Scorecard_URL__c</fullName>
    <label>Last Scorecard URL</label>
    <type>Url</type>
</CustomField>