force-app/main/default/objects/Provider__c/fields/Licensing_State__c.field-meta.xml
<CustomField>
    <fullName>Licensing_State__c</fullName>
    <label>Licensing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>