force-app/main/default/objects/Provider__c/fields/Medical_Dental_School__c.field-meta.xml
<CustomField>
    <fullName>Medical_Dental_School__c</fullName>
    <label>Medical/Dental School</label>
    <length>100</length>
    <type>Text</type>
</CustomField>