force-app/main/default/objects/Provider__c/fields/Neuromuscular_Dentistry_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Neuromuscular_Dentistry_Conditions__c</fullName>
    <label>Neuromuscular Dentistry Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jaw Irregularities</fullName>
            </value>
            <value>
                <fullName>Jaw Misalignment Leading to TMJ</fullName>
            </value>
            <value>
                <fullName>Malocclusion (Bad Bite)</fullName>
            </value>
            <value>
                <fullName>Orofacial Pain</fullName>
            </value>
            <value>
                <fullName>TMJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>