force-app/main/default/objects/Provider__c/fields/Neuromuscular_Dentistry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Neuromuscular_Dentistry_Procedures__c</fullName>
    <label>Neuromuscular Dentistry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMG (Electromyography)</fullName>
            </value>
            <value>
                <fullName>Jaw Tracking</fullName>
            </value>
            <value>
                <fullName>Orthotic Treatment</fullName>
            </value>
            <value>
                <fullName>Sonography</fullName>
            </value>
            <value>
                <fullName>Temporomandibular Joint (TMJ) Recording</fullName>
            </value>
            <value>
                <fullName>Transcutaneous Electrical Nerve Stmultn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>