force-app/main/default/objects/Provider__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>A National Provider Identifier or NPI is a unique 10-digit identification number issued to health care providers in the United States by the Centers for Medicare and Medicaid Services (CMS).</description>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>