force-app/main/default/objects/Provider__c/fields/Ophthalmology_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Ophthalmology_Conditions__c</fullName>
    <label>Ophthalmology Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accidental Eye Injuries</fullName>
            </value>
            <value>
                <fullName>Acute Angle-Closure Glaucoma</fullName>
            </value>
            <value>
                <fullName>Allergic Conjunctivitis</fullName>
            </value>
            <value>
                <fullName>Amaurosis Fugax</fullName>
            </value>
            <value>
                <fullName>Aphakia</fullName>
            </value>
            <value>
                <fullName>Asthenopia</fullName>
            </value>
            <value>
                <fullName>Astigmatism</fullName>
            </value>
            <value>
                <fullName>Bacterial Conjunctivitis</fullName>
            </value>
            <value>
                <fullName>Binocular Vision Disorder</fullName>
            </value>
            <value>
                <fullName>Black Eye</fullName>
            </value>
            <value>
                <fullName>Blepharitis</fullName>
            </value>
            <value>
                <fullName>Blepharochalasis</fullName>
            </value>
            <value>
                <fullName>Blepharoptosis</fullName>
            </value>
            <value>
                <fullName>Blurred Vision</fullName>
            </value>
            <value>
                <fullName>Cataract, Anterior Polar, Dominant</fullName>
            </value>
            <value>
                <fullName>Cataract, Congenital, Autosomal Dominant</fullName>
            </value>
            <value>
                <fullName>Cataract, Congenital, Volkmann Type</fullName>
            </value>
            <value>
                <fullName>Cataract, Crystalline Coralliform</fullName>
            </value>
            <value>
                <fullName>Cataract, Microphthalmia - Nystagmus</fullName>
            </value>
            <value>
                <fullName>Cataract, Total Congenital</fullName>
            </value>
            <value>
                <fullName>Cataract, Zonular</fullName>
            </value>
            <value>
                <fullName>Cataract - Alopecia - Sclerodactyly</fullName>
            </value>
            <value>
                <fullName>Cataract - Ataxia - Deafness</fullName>
            </value>
            <value>
                <fullName>Cataract - Cardiomyopathy</fullName>
            </value>
            <value>
                <fullName>Cataract Congenital Dominant Non Nuclear</fullName>
            </value>
            <value>
                <fullName>Cataract - Congenital Ichthyosis</fullName>
            </value>
            <value>
                <fullName>Cataract Dental Syndrome</fullName>
            </value>
            <value>
                <fullName>Cataract Hutterite Type</fullName>
            </value>
            <value>
                <fullName>Cataract - Microcornea Syndrome</fullName>
            </value>
            <value>
                <fullName>Chalazion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>