force-app/main/default/objects/Provider__c/fields/Ophthalmology_Practicing_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Ophthalmology_Practicing_Specialties__c</fullName>
    <label>SecondOphthalmologyPracticingSpecialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Segment Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Anterior Segment Surgery</fullName>
            </value>
            <value>
                <fullName>Cataract Surgery</fullName>
            </value>
            <value>
                <fullName>Cornea &amp; External Diseases</fullName>
            </value>
            <value>
                <fullName>Cornea &amp; Refractive Surgery</fullName>
            </value>
            <value>
                <fullName>Glaucoma</fullName>
            </value>
            <value>
                <fullName>Neuro-Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Ocular Immunology</fullName>
            </value>
            <value>
                <fullName>Ocular Oncology</fullName>
            </value>
            <value>
                <fullName>Oculoplastic Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmic Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmic Reconstructive Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmic Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmic Vitreous Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Orbital Disorders</fullName>
            </value>
            <value>
                <fullName>Orbital Surgery</fullName>
            </value>
            <value>
                <fullName>Pediatric Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Retinal Diseases</fullName>
            </value>
            <value>
                <fullName>Uveitis</fullName>
            </value>
            <value>
                <fullName>Vitreoretinal Disease &amp; Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>