force-app/main/default/objects/Provider__c/fields/Ophthalmology_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Ophthalmology_Procedures__c</fullName>
    <label>Ophthalmology Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Lamellar Keratoplasty (ALK)</fullName>
            </value>
            <value>
                <fullName>Anterior Vitrectomy</fullName>
            </value>
            <value>
                <fullName>Antifungal Eye Drops</fullName>
            </value>
            <value>
                <fullName>Argon Laser Surgery</fullName>
            </value>
            <value>
                <fullName>Argon Laser Trabeculoplasty</fullName>
            </value>
            <value>
                <fullName>Argon Laser Treatment</fullName>
            </value>
            <value>
                <fullName>Asian Eyelid Surgery</fullName>
            </value>
            <value>
                <fullName>Astigmatic Keratotomy</fullName>
            </value>
            <value>
                <fullName>Avastin® Injection</fullName>
            </value>
            <value>
                <fullName>Biopsy of Cornea</fullName>
            </value>
            <value>
                <fullName>Blepharoplasty</fullName>
            </value>
            <value>
                <fullName>Blepharorrhaphy</fullName>
            </value>
            <value>
                <fullName>B-Scan Ultrasound</fullName>
            </value>
            <value>
                <fullName>Canthoplasty and Canthopexy</fullName>
            </value>
            <value>
                <fullName>Canthotomy</fullName>
            </value>
            <value>
                <fullName>Cataract Removal Surgery</fullName>
            </value>
            <value>
                <fullName>Clear Lens Extraction</fullName>
            </value>
            <value>
                <fullName>Clear Lens Srgry w/Multifocal Implant</fullName>
            </value>
            <value>
                <fullName>Clear Lens Surgery-Crct Nr/Fr Simltans</fullName>
            </value>
            <value>
                <fullName>Conjunctivocystorhinostomy</fullName>
            </value>
            <value>
                <fullName>Conjunctivoplasty</fullName>
            </value>
            <value>
                <fullName>Contact Lens Exams</fullName>
            </value>
            <value>
                <fullName>Contact Lens Services</fullName>
            </value>
            <value>
                <fullName>Coreoplasty</fullName>
            </value>
            <value>
                <fullName>Corneal Graft</fullName>
            </value>
            <value>
                <fullName>Corneal Tattooing</fullName>
            </value>
            <value>
                <fullName>Cornea Surgery</fullName>
            </value>
            <value>
                <fullName>Cornea Transplant</fullName>
            </value>
            <value>
                <fullName>Cryopexy</fullName>
            </value>
            <value>
                <fullName>Cryoretinopexy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>