force-app/main/default/objects/Provider__c/fields/Optometry_Practicing_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Optometry_Practicing_Specialties__c</fullName>
    <label>SecondaryOptometry PracticingSpecialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cornea &amp; Contact Management</fullName>
            </value>
            <value>
                <fullName>Low Vision Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Occupational Optometry</fullName>
            </value>
            <value>
                <fullName>Optometry</fullName>
            </value>
            <value>
                <fullName>Pediatric Optometry</fullName>
            </value>
            <value>
                <fullName>Sports Vision</fullName>
            </value>
            <value>
                <fullName>Vision Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>