force-app/main/default/objects/Provider__c/fields/Optometry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Optometry_Procedures__c</fullName>
    <label>Optometry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergy Drops</fullName>
            </value>
            <value>
                <fullName>Allergy Treatment</fullName>
            </value>
            <value>
                <fullName>B-Scan Ultrasound</fullName>
            </value>
            <value>
                <fullName>Contact Lens Exams</fullName>
            </value>
            <value>
                <fullName>Contact Lens Services</fullName>
            </value>
            <value>
                <fullName>Corneal Graft</fullName>
            </value>
            <value>
                <fullName>Diabetes Eye Care</fullName>
            </value>
            <value>
                <fullName>Diabetic Eye Exam</fullName>
            </value>
            <value>
                <fullName>Epi-LASIK Eye Surgery</fullName>
            </value>
            <value>
                <fullName>Eye Drops</fullName>
            </value>
            <value>
                <fullName>Eye Examination</fullName>
            </value>
            <value>
                <fullName>Eyeglasses</fullName>
            </value>
            <value>
                <fullName>Eye Patch</fullName>
            </value>
            <value>
                <fullName>Eye Procedure</fullName>
            </value>
            <value>
                <fullName>Eye Surgery</fullName>
            </value>
            <value>
                <fullName>Foreign Body Removal</fullName>
            </value>
            <value>
                <fullName>Foreign Body Removal from Eye</fullName>
            </value>
            <value>
                <fullName>Glaucoma Treatment</fullName>
            </value>
            <value>
                <fullName>Implantable Contact Lens</fullName>
            </value>
            <value>
                <fullName>Lash Enhancer</fullName>
            </value>
            <value>
                <fullName>Ocular Inflammation (Uveitis) Treatment</fullName>
            </value>
            <value>
                <fullName>Post-Operative Care</fullName>
            </value>
            <value>
                <fullName>Pre-Operative Care</fullName>
            </value>
            <value>
                <fullName>Prism Lenses</fullName>
            </value>
            <value>
                <fullName>Punctal Plug Insertion</fullName>
            </value>
            <value>
                <fullName>Retinal Testing</fullName>
            </value>
            <value>
                <fullName>Soft Contact Lenses</fullName>
            </value>
            <value>
                <fullName>Strabismus Examination</fullName>
            </value>
            <value>
                <fullName>Vision Screening</fullName>
            </value>
            <value>
                <fullName>Visual Evoked Potential (VEP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>